--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is an application did use by users of TransformArt, lovers of art, normal people, etc...",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/test/ --timeout 10000 --dev",
+    "test": "mocha src/tests/ --timeout 10000 --dev",
     "dev": "nodemon src/ --dev",
     "start": "node src/ --prod"
   },
