--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "mocha src/tests/ --timeout 10000 --dev",
     "dev": "nodemon src/ --dev",
-    "start": "node src/ --prod"
+    "start": "node src/ --prod",
+    "lint": "eslint src/ --fix"
   },
   "keywords": [],
   "author": "Derek Paul",
   "license": "MIT",
   "dependencies": {
+    "@hapi/boom": "^9.1.4",
     "bcryptjs": "2.4.3",
     "connect-flash": "0.1.1",
     "dayjs": "1.10.7",
@@ -20,6 +22,7 @@
     "express-mysql-session": "2.1.7",
     "express-session": "1.17.2",
     "express-validator": "6.14.0",
+    "joi": "^17.6.0",
     "mocha": "9.2.0",
     "morgan": "1.10.0",
     "mysql": "2.18.1",
@@ -28,7 +31,14 @@
   },
   "devDependencies": {
     "chai": "4.3.6",
+    "eslint": "^8.8.0",
     "nodemon": "2.0.15",
     "supertest": "6.2.2"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": false,
+      "node": true
+    }
   }
 }
