--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "bcryptjs": "2.4.3",
+    "cloudinary": "^1.28.1",
     "connect-flash": "0.1.1",
     "dayjs": "1.10.7",
     "dotenv": "15.0.0",
@@ -23,6 +24,7 @@
     "express-session": "1.17.2",
     "express-validator": "6.14.0",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "9.2.0",
     "morgan": "1.10.0",
     "mysql": "2.18.1",
